--- a/cocos2dx-app/DoomWar/win32/DoomWarCpp.vcxproj.filters
+++ b/cocos2dx-app/DoomWar/win32/DoomWarCpp.vcxproj.filters
@@ -75,6 +75,12 @@
     <ClCompile Include="..\Engine\Actor.cpp">
       <Filter>Engine</Filter>
     </ClCompile>
+    <ClCompile Include="..\Engine\Scene.cpp">
+      <Filter>Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Engine\Engine.cpp">
+      <Filter>Engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -122,7 +128,7 @@
     <ClInclude Include="..\Engine\Actor.h">
       <Filter>Engine</Filter>
     </ClInclude>
-    <ClInclude Include="..\Engine\Map.h">
+    <ClInclude Include="..\Engine\Scene.h">
       <Filter>Engine</Filter>
     </ClInclude>
   </ItemGroup>
