--- a/cocos2dx-app/makefile
+++ b/cocos2dx-app/makefile
@@ -75,6 +75,7 @@ DWclient:$(DWObjs)
 DWcpy:
 	@cp $(DIR_DW)/Data/heros.xml $(BIN)/Data/heros.xml
 	@cp $(DIR_DW)/Data/monsters.xml $(BIN)/Data/monsters.xml
+	@cp $(DIR_DW)/Data/barriers.xml $(BIN)/Data/barriers.xml
 	@cp $(DIR_DW)/Data/skills.xml $(BIN)/Data/skills.xml
 	@cp $(DIR_DW)/Data/buffs.xml $(BIN)/Data/buffs.xml
 %.obj : %.cpp
