--- a/cocos2dx-app/DoomWar/Data/UIPVE/Export/UIPVE_1/UIPVE0.plist
+++ b/cocos2dx-app/DoomWar/Data/UIPVE/Export/UIPVE_1/UIPVE0.plist
@@ -34,9 +34,9 @@
 				<key>originalHeight</key>
 				<integer>1</integer>
 				<key>x</key>
-				<integer>0</integer>
+				<integer>36</integer>
 				<key>y</key>
-				<integer>3</integer>
+				<integer>0</integer>
 				<key>offsetX</key>
 				<real>0</real>
 				<key>offsetY</key>
@@ -53,9 +53,9 @@
 				<key>originalHeight</key>
 				<integer>88</integer>
 				<key>x</key>
-				<integer>0</integer>
+				<integer>72</integer>
 				<key>y</key>
-				<integer>6</integer>
+				<integer>0</integer>
 				<key>offsetX</key>
 				<real>0</real>
 				<key>offsetY</key>
@@ -72,9 +72,9 @@
 				<key>originalHeight</key>
 				<integer>135</integer>
 				<key>x</key>
-				<integer>3</integer>
+				<integer>75</integer>
 				<key>y</key>
-				<integer>6</integer>
+				<integer>0</integer>
 				<key>offsetX</key>
 				<real>0</real>
 				<key>offsetY</key>
@@ -91,9 +91,9 @@
 				<key>originalHeight</key>
 				<integer>113</integer>
 				<key>x</key>
-				<integer>6</integer>
+				<integer>78</integer>
 				<key>y</key>
-				<integer>6</integer>
+				<integer>0</integer>
 				<key>offsetX</key>
 				<real>0</real>
 				<key>offsetY</key>
@@ -110,9 +110,9 @@
 				<key>originalHeight</key>
 				<integer>62</integer>
 				<key>x</key>
-				<integer>6</integer>
+				<integer>720</integer>
 				<key>y</key>
-				<integer>121</integer>
+				<integer>0</integer>
 				<key>offsetX</key>
 				<real>0</real>
 				<key>offsetY</key>
@@ -129,9 +129,9 @@
 				<key>originalHeight</key>
 				<integer>76</integer>
 				<key>x</key>
-				<integer>0</integer>
+				<integer>830</integer>
 				<key>y</key>
-				<integer>185</integer>
+				<integer>0</integer>
 				<key>offsetX</key>
 				<real>0</real>
 				<key>offsetY</key>
@@ -150,7 +150,7 @@
 				<key>x</key>
 				<integer>0</integer>
 				<key>y</key>
-				<integer>263</integer>
+				<integer>137</integer>
 				<key>offsetX</key>
 				<real>0</real>
 				<key>offsetY</key>
@@ -167,9 +167,47 @@
 				<key>originalHeight</key>
 				<integer>62</integer>
 				<key>x</key>
-				<integer>116</integer>
+				<integer>145</integer>
 				<key>y</key>
-				<integer>121</integer>
+				<integer>137</integer>
+				<key>offsetX</key>
+				<real>0</real>
+				<key>offsetY</key>
+				<real>0</real>
+			</dict>
+			<key>step.png</key>
+			<dict>
+				<key>width</key>
+				<integer>225</integer>
+				<key>height</key>
+				<integer>87</integer>
+				<key>originalWidth</key>
+				<integer>225</integer>
+				<key>originalHeight</key>
+				<integer>87</integer>
+				<key>x</key>
+				<integer>254</integer>
+				<key>y</key>
+				<integer>137</integer>
+				<key>offsetX</key>
+				<real>0</real>
+				<key>offsetY</key>
+				<real>0</real>
+			</dict>
+			<key>earn.png</key>
+			<dict>
+				<key>width</key>
+				<integer>190</integer>
+				<key>height</key>
+				<integer>77</integer>
+				<key>originalWidth</key>
+				<integer>190</integer>
+				<key>originalHeight</key>
+				<integer>77</integer>
+				<key>x</key>
+				<integer>481</integer>
+				<key>y</key>
+				<integer>137</integer>
 				<key>offsetX</key>
 				<real>0</real>
 				<key>offsetY</key>
@@ -185,14 +223,14 @@
 			<key>realTextureFileName</key>
 			<string>UIPVE0.png</string>
 			<key>size</key>
-			<string>{2048,2048}</string>
+			<string>{1024,1024}</string>
 		</dict>
 		<key>texture</key>
 		<dict>
 			<key>width</key>
-			<integer>2048</integer>
+			<integer>1024</integer>
 			<key>height</key>
-			<integer>2048</integer>
+			<integer>1024</integer>
 		</dict>
 	</dict>
 </plist>
