--- a/cocos2dx-app/DoomWar/win32/DoomWarCpp.vcxproj.filters
+++ b/cocos2dx-app/DoomWar/win32/DoomWarCpp.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="..\Engine\Prop.cpp">
       <Filter>Engine</Filter>
     </ClCompile>
+    <ClCompile Include="..\System\Bag.cpp">
+      <Filter>System</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -175,6 +178,9 @@
     </ClInclude>
     <ClInclude Include="..\Engine\Prop.h">
       <Filter>Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\System\Bag.h">
+      <Filter>System</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
