--- a/cocos2dx-app/DoomWar/win32/DoomWarCpp.vcxproj
+++ b/cocos2dx-app/DoomWar/win32/DoomWarCpp.vcxproj
@@ -138,17 +138,17 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\external\libwebsockets\win32\lib\*.*" "$(OutD
     <ClCompile Include="..\Components\EventDispatcher.cpp" />
     <ClCompile Include="..\Components\EventDispatcher.h" />
     <ClCompile Include="..\Components\Heap.cpp" />
-    <ClCompile Include="..\Components\MapSprite.cpp" />
     <ClCompile Include="..\Components\PropSprite.cpp" />
-    <ClCompile Include="..\Components\PVEBattleScene.cpp" />
-    <ClCompile Include="..\Components\PVEBattleUI.cpp" />
+    <ClCompile Include="..\Components\PVEView.cpp" />
+    <ClCompile Include="..\Components\PVEUI.cpp" />
     <ClCompile Include="..\Components\ResourceManager.cpp" />
+    <ClCompile Include="..\Components\WorldView.cpp" />
     <ClCompile Include="..\Config\Config.cpp" />
     <ClCompile Include="..\Engine\Actor.cpp" />
     <ClCompile Include="..\Engine\Command.cpp" />
     <ClCompile Include="..\Engine\Engine.cpp" />
     <ClCompile Include="..\Engine\Prop.cpp" />
-    <ClCompile Include="..\Engine\Scene.cpp" />
+    <ClCompile Include="..\Engine\World.cpp" />
     <ClCompile Include="..\Game\Game.cpp" />
     <ClCompile Include="..\Game\Launcher.cpp" />
     <ClCompile Include="..\System\Bag.cpp" />
@@ -168,17 +168,17 @@ xcopy /Y /Q "$(ProjectDir)..\..\..\external\libwebsockets\win32\lib\*.*" "$(OutD
     <ClInclude Include="..\Components\dwtype.h" />
     <ClInclude Include="..\Components\Effect.h" />
     <ClInclude Include="..\Components\Heap.h" />
-    <ClInclude Include="..\Components\MapSprite.h" />
     <ClInclude Include="..\Components\PropSprite.h" />
-    <ClInclude Include="..\Components\PVEBattleScene.h" />
-    <ClInclude Include="..\Components\PVEBattleUI.h" />
+    <ClInclude Include="..\Components\PVEView.h" />
+    <ClInclude Include="..\Components\PVEUI.h" />
     <ClInclude Include="..\Components\ResourceManager.h" />
+    <ClInclude Include="..\Components\WorldView.h" />
     <ClInclude Include="..\Config\Config.h" />
     <ClInclude Include="..\Engine\Actor.h" />
     <ClInclude Include="..\Engine\Command.h" />
     <ClInclude Include="..\Engine\Engine.h" />
     <ClInclude Include="..\Engine\Prop.h" />
-    <ClInclude Include="..\Engine\Scene.h" />
+    <ClInclude Include="..\Engine\World.h" />
     <ClInclude Include="..\Game\Game.h" />
     <ClInclude Include="..\Game\Launcher.h" />
     <ClInclude Include="..\System\Bag.h" />
